samples/_failures_safe/1761072444_e3a57e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b528b0d3.c: In function ‘display_stats’:
./samples/SAFE/__tmp_b528b0d3.c:137:12: error: missing terminating " character
  137 |     printf("Log Analysis Results:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b528b0d3.c:137:5: error: expected expression at end of input
  137 |     printf("Log Analysis Results:\
      |     ^~~~~~
./samples/SAFE/__tmp_b528b0d3.c:137:5: error: expected declaration or statement at end of input
